mychart/templates/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: abhilashbalaji/sc-db:latest
          ports:
          - containerPort: 3306
            name: db
          volumeMounts:
          - name: db-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
      - name: db-persistent-storage
        persistentVolumeClaim:
          claimName: db-pvc
          
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  ports:
    - port: 3306
  selector:
    app: db
