mychart/templates/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server-container
          image: svenlankester/sc-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: server

---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 31640
  selector:
    app: server
